fixed spacing issue

--- a/css/singleProject.css
+++ b/css/singleProject.css
@@ -84,6 +84,14 @@ body {
     margin-top: 180px;
   }
 }
+@media (max-width: 1115px) {
+  .singleProject_text p {
+    font-size: 12px
+  }
+  .singleProject_text p.longtitle {
+    font-size: 18px;
+  }
+}
 @media (max-width: 768px) {
   .singleProject_text p {
     margin-top: 0;
